--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,7 @@ footer {
     padding: 20px 55px;
     color: white;
     /* position: absolute; */
-    /* margin-top: 100px; */
+    margin-top: 100px;
     font-family: 'Open Sans';
     background-color: #132215;
     font-size: 14px;
